# soko

./: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml
src/agent/: chain.py  tools.py
src/cache/: cache.py
src/cli/: ask.py  repl.py
src/ingest/: chunker.py  embedder.py  indexer.py  loader.py
src/retrieval/: formatter.py  hybrid_search.py  keyword_search.py  vector_search.py
src/utils/: hash.py  registry.py  reset.py  status.py  utils.py
