[project]
name = "soko"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.3.7",
    "langchain>=1.2.0",
    "langchain-openai>=1.1.6",
    "pdfplumber>=0.11.8",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.2.0",
]
